# Phase-I-Todo-In-Memory-Python-Console-App

./: README.md
heckathon/: CLAUDE.md  DEMO_WALKTHROUGH.md  HOW_TO_USE.md  INDEX.md  PHASE_I_COMPLETE.md  QUICK_START.md  README.md  SHELL_GUIDE.md  START_HERE.md  constitution.md  demo.py  package.json  pyproject.toml  requirements.txt  run_shell.bat  run_shell.sh  shell.py
heckathon/specs_history/: spec_add_task.json  spec_delete_task.json  spec_mark_complete.json  spec_update_task.json  spec_view_tasks.json
heckathon/src/: __init__.py  main.py  todo.py
heckathon/todo_app/: README.md  TODO_APP_PLAN.md  TODO_APP_SPEC.md  TODO_APP_TASKS.md  requirements.txt  test_features.py  todo_app.py
heckathon/todo_app/tests/: test_todo_app.py
