[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-app"
version = "1.0.0"
description = "A command-line todo application that stores tasks in memory"
authors = [
    {name = "Development Team", email = "dev@example.com"}
]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/todo-app"
Repository = "https://github.com/yourusername/todo-app.git"

[tool.setuptools]
packages = ["src"]
